yaml/dds-dev/00-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: coffee-dds
  labels:
    name: coffee-dds
