yaml/dds-dev/redis-deploy.yaml
---
# server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dds-redis
  namespace: coffee-dds
  labels:
    name: dds-redis
spec:
  selector:
    matchLabels:
      name: dds-redis
  replicas: 1
  template:
    metadata:
      labels:
        name: dds-redis
    spec:
      containers:
        - name: dds-redis
          image: redis:6.2.6-alpine
          resources:
            limits:
              cpu: 800m
              memory: 300Mi
            requests:
              cpu: 500m
              memory: 300Mi
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-conf
              mountPath: /usr/local/etc/redis/redis.conf
              subPath: redis.conf
      volumes:
        - name: redis-conf
          configMap:
            name: redis-conf

---
apiVersion: v1
kind: Service
metadata:
  name: dds-redis
  namespace: coffee-dds
  labels:
    name: dds-redis
spec:
  ports:
  - port: 6379
    name: dnport
  clusterIP: None
  selector:
    name: dds-redis
