yaml/dds-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dds
  namespace: coffee-dds
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - coffee-dds.dckube.scilifelab.se
    secretName: dds-tls
  rules:
  - host: coffee-dds.dckube.scilifelab.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dds-backend
            port:
              number: 5000
